<resources>
    <string name="app_name" translatable="false">staffTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">boş fragment</string>
    <string name="add_company">Firma Görüşmesi Ekle</string>
    <string name="company_edit">Şirket adı...</string>
    <string name="comp_address">Adres:</string>
    <string name="ekle">Ekle</string>
    <string name="email">E-posta</string>
    <string name="password">Parola</string>
    <string name="login">Giriş yap</string>
    <string name="forgot_password">Şifremi unuttum</string>
    <string name="switch_text">Arkaplan Takibi:</string>
    <string name="company_aciklama">Açıklama :</string>
    <string name="add_description">Açıklama ekle</string>
    <string name="meeting_rate">Görüşme verimi</string>
    <string name="adres_on">Adres :</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sales_tracker">Sales Tracker</string>
    <string name="forgot_password_alert">Kayıtlı olan e-mail adresini gir.</string>
    <string name="send">Gönder</string>
    <string name="cancel_text">İptal</string>
    <string name="login_success">Giriş başarılı.</string>
    <string name="exit_app">Çıkış</string>
    <string name="exit_app_message">Uygulamadan çıkmak istediğine emin misin?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="need_permission_alert">İzin gerekli.</string>
    <string name="need_permission_content">Uygulamanın düzgün çalışması için konum bilgilerine erişim gerekli.</string>
    <string name="block">Engelle</string>
    <string name="need_permission_blocked">This application need to use some permissions, \" +                                     \"you can grant them in the application settings.\"</string>
    <string name="go_to_settings">Ayarlara Git.</string>
    <string name="home">Harita</string>
    <string name="person">Profilim</string>
    <string name="settings">Ayarlarım</string>
    <string name="tasks">Görevlerim</string>
    <string name="zaman">Tarih :</string>
    <string name="durum">Durum :</string>
    <string name="aciklama">Açıklama :</string>
    <string name="ready">HAZIR</string>
    <string name="task_location_button">Haritada Göster</string>
    <string name="not_ekle">Düzenle</string>
    <string name="street_view">Sokak Gürünümü</string>
    <string name="draw_route">Rota Çiz</string>
    <string name="ok">Tamam</string>
    <string name="task_note_on">Görev Notu :</string>
    <string name="api_key" translatable="false">AIzaSyDYlBytkLbdxBm0GkzKmvP5Ikrp03kNiNg</string>
    <string name="location_updated" translatable="false">Location Updated: %1$s</string>
    <string name="result">Sonuç :</string>
    <string name="check_gps_internet">Lütfen İnternet ve Konum ayarlarınızı kontrol ediniz.</string>
    <string name="logout">Çıkış Yap</string>
    <string name="privacy_policy">Privacy Policy - Terms and Conditions</string>
    <string name="background_warning">Sales Tracker arkalplanda konum verisine erişecek.
        Konum verileriniz Sales Tracker Web sayfasında iş yöneticiniz tarafından takip edilecektir.
        Onay verdikten sonra dilerseniz ayarlar sayfasından bu özelliği kapatabilirsiniz. </string>
    <string name="background_open">AÇIK</string>
    <string name="background_closed">KAPALI</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="first_warning">Sales Tracker uygulamasının düzgün şekilde çalışması için arkaplanda konum verilerini toplaması gerekir.
       Uygulama bu özelliği aktif etmek için sonraki adımda  izin isteyecektir. Gerekli izinler olmadıkça uygulama çalışmayacaktır.</string>
    <string name="required_location_warning">"HER ZAMAN İZİN VER" seçeneğini seçmeniz gereklidir.</string>
    <string name="next">İLERİ</string>
    <string name="ANLADIM">başla</string>
    <string name="welcome_text">Hoşgeldiniz</string>
    <string name="welcome_text_bottom">Uygulama, pazarlama yöneticinizin sizi yönlendirmesi, izlemesi ve müşteriler hakkında bilgi toplaması için arka planda çalışmaya ve konum verisini toplamaya ihtiyaç duyar.
        Bu bilgileri sadece personeli olduğunuz firma Salestracker Web App üzerinden işleyecektir.</string>
    <string name="permission_title">Arkaplanda Çalışma ve Konum İzni</string>
    <string name="on_background">Uygulama şu an arkaplanda çalışıyor.</string>
    <string name="background_collect_data">Arkaplanda konum alınıyor.</string>


</resources>