<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="#ffffffff">


    <TextView
        android:id="@+id/text_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="title"
        android:textColor="#ff000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dialog">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zaman"
                android:width="100dp"/>

            <TextView
                android:id="@+id/created_time_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zaman" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aciklama" />

            <TextView
                android:id="@+id/dialog_task_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zaman" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/durum" />

            <TextView
                android:id="@+id/dialog_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zaman" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_note_on" />

            <TextView
                android:id="@+id/dialog_task_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>


    <Button
        android:id="@+id/btn_dialog"
        android:layout_marginHorizontal="8dp"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@+id/text_dialog"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:background="@color/purple_500"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/ok"
        android:textColor="#ffffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/direction_button"
        app:layout_constraintStart_toEndOf="@+id/street_view_button" />

    <Button
        android:id="@+id/direction_button"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@+id/text_dialog"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:background="@color/purple_500"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/draw_route"
        android:textAllCaps="false"
        android:textColor="#ffffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/street_view_button"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@+id/text_dialog"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="4dp"
        android:background="@color/purple_500"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/street_view"
        android:textAllCaps="false"
        android:textColor="#ffffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>