<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:gravity="center_horizontal"
    android:minHeight="500dp"
    android:background="@drawable/linear_border"
    android:backgroundTint="#6A94DD"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/bottom_sheet_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_company"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/ekle_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_company_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_layout">
    <EditText
        android:id="@+id/et_company"
        android:layout_width="231dp"
        android:layout_height="42dp"
        android:hint="@string/company_edit"
        android:inputType="text"

       />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/ekle_button"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:text="@string/ekle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Kısa not ekle."
        android:hint="@string/add_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_company_layout" />

    <TextView
        android:id="@+id/location_text_street"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:text="@string/comp_address"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_description" />

    <TextView
        android:id="@+id/location_text_city"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_text_street" />

    <TextView
        android:id="@+id/meeting_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="@string/meeting_rate"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_text_city" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/rating_bar"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="252dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:progressTint="@color/purple_200"
        android:secondaryProgressTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_rate" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="#222"
        app:layout_constraintBottom_toTopOf="@+id/meeting_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_text_city" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#222"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toTopOf="@+id/meeetin_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar" />
    <TextView
        android:id="@+id/meeetin_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="Görüşme Sonucu"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="350dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeetin_result">

        <RadioButton
            android:id="@+id/radio_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Olumlu" />

        <RadioButton
            android:id="@+id/radio_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:text="Olumsuz" />

        <RadioButton
            android:id="@+id/radio_schedule"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="Ertele" />
    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#9000ff00"
        android:visibility="gone"
        android:padding="10dp"
        android:id="@+id/date_time_result_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">


        <TextView
            android:id="@+id/textview_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#110"
            android:layout_margin="20dp"
            android:gravity="center_horizontal" />

    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/schedule_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <TextView
            android:id="@+id/pick_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="Randevu Ayarla"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="359dp"
            android:layout_height="317dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_date" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/time_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/pick_date"
            app:layout_constraintVertical_bias="0.495">

            <ImageButton
                android:id="@+id/time_next"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/time_done"
                android:backgroundTint="#00000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/time_picker"
                app:layout_constraintTop_toTopOf="parent" />

            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:timePickerMode="spinner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/time_back"
                android:backgroundTint="#00000000"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/time_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/time_picker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>